# obsidian-operating-layer

./: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  Makefile  README.md  ROLE_NOTES.md  SECURITY.md  approval-manifest.example.json  obsidian_apply.py  obsidian_controlled_autonomy.py  obsidian_observe.py  obsidian_operating_layer.py  obsidian_proposal_worker.py  obsidian_propose.py  obsidian_verify.py  pyproject.toml  renovate.json
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.specify/: feature.json  init-options.json  integration.json
config/: roles.yaml
docs/: AGENTS.md  ARCHITECTURE.md  DECISIONS.md  INSTRUCTION_TREE.md  PROJECT_MAP.md  PROJECT_OVERVIEW.md  PROJECT_SKILLS.md  RUNTIME_STATUS.md  TOOLS_POLICY.md  component-inventory.md  controlled-autonomy.md  github-integration-rollout.md  github-integration.md  github-marketplace-integrations.md  operator-guide.md  orchestration-board.md  release-readiness.md  report-template.md  telegram-summary-templates.md
manifests/: approval_manifest.example.json
obsidian_operating_layer/: core.py
policies/: standing-safe-link-prefix-hygiene.policy.json
schemas/: codex_report.v1.json  codex_task.v1.json
scripts/: smoke.py
templates/: report-template.md
tests/: AGENTS.md  test_acceptance_bundle_doctor.py  test_adapter_sample_records.py  test_apply_rehearsal.py  test_approved_apply_readiness_v1.py  test_archive_shadow_index.py  test_backfill_report.py  test_candidate_scorer_v1.py  test_candidate_volume_operator_packet.py  test_channel_registry.py  test_codex_hermes_comm.py  test_field_slice.py  (+52 more)
(+257 files in other folders)
